--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 footer {
     padding: 30px 0;
-    clear: both;
+    /* clear: both; */
     font-size: 12px;
     color: #ffffff;
     color: #cccccc;
@@ -59,12 +59,10 @@ footer {
   color: #ffffff;
 }
 
-/* sidebar */
-
-.sidebar {
+#connectwme {
   float: right;
   width: 100%;
-  max-width: 270px;
+  max-width: 100%;
   padding: 30px;
   margin-bottom: 20px;
   background: #fff;
@@ -72,7 +70,7 @@ footer {
 }
 
 h3,
-.sidebar h2 {
+#connectwme {
   padding-bottom: 20px;
   margin-bottom: 15px;
   line-height: 22px;
@@ -92,6 +90,7 @@ h3,
 
 
 
+
 .main-section {
   float: left;
   width: 100%;
@@ -101,18 +100,21 @@ h3,
 }
 
 .aboutMeP{
-  float: right;
   height: 50%;
-  width: 50%;
-  margin-right: 250px;
   margin-bottom: 60px;
 }
+ @media only screen and (max-width: 500px) {
+  .aboutMeP {
+    width: 100%;
+    margin-right: 0px;
+  }
+} 
 
 #profilePic{
   float: left;
   height: 50%;
-  width: 20%;
-  padding-left: 20px;
+  
+  padding-right: 20px;
   
 }
 
@@ -124,7 +126,23 @@ h3,
   color: #ffffff;
   
 }
-.row.justify-content-lg-center-override{
+
+#customCollapseCard2{
   color: #4aaaa5;
 }
 
+#cwm{
+  color: #4aaaa5;
+}
+
+#customCollapseCard1{
+  color: #4aaaa5;
+}
+
+#customCollapseCard2{
+  color: #4aaaa5;
+}
+
+#customCollapseCard3{
+  color: #4aaaa5;
+}
