--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 footer {
     padding: 30px 0;
-    /* clear: both; */
+    clear: both; 
     font-size: 12px;
     color: #ffffff;
     color: #cccccc;
@@ -8,7 +8,6 @@ footer {
     background: #666666;
     border-top: 8px solid #4aaaa5;
     height: 50px;
-    float: center;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
